syntax="proto3";
package proto;


message PeerEntry {
    string peer_id = 1;
    string proxy_ip = 2;
    float latitude = 4;
    float longitude = 5; 
}

message ProxyEntry {
    uint32 id  = 7;
    string unique_key = 8;
    string global_ip = 1;
    string global_port = 2;
    float latitude = 3;
    float longitude = 4;
    int64 created_at = 5;
    int64 updated_at = 6;
}