syntax = "proto3";
package proto;

import "empty.proto";

service Peer {
    rpc NoticeFromProxyRPC(NoticeFromProxyRequest) returns(Empty);
    rpc GetPeerID(Empty) returns(GetPeerIDResponse);
}

message NoticeFromProxyRequest {
    uint32 id = 5;
    string grpc_port = 1;
    string tcp_port = 2;
    string udp_port = 3;
    string addr = 4;
}

message GetPeerIDResponse {
    string id = 1;
}